# memo-opensource

HDiffPatch/: CMakeLists.txt  README.md
cantools/: CMakeLists.txt  README.md
cantools/docs/: DBC格式.md  安装使用.md  源码说明.md
cantools/hawkmoto/: CMakeLists.txt  Intel_test.cpp  hawkmoto.c  hawkmoto.dbc  hawkmoto.h
cantools/motohawk/: CMakeLists.txt  Motorola_MSB_test.cpp  function_test.cpp  motohawk.c  motohawk.dbc  motohawk.h
ceres/: Problem.md
libdoip/hello/libdoipclient/include/: DoIPClient_h.h
libdoip/hello/libdoipclient/src/: DoIPClient.cpp
libdoip/hello/libdoipcommon/include/: DoIPGenericHeaderHandler.h
libdoip/hello/libdoipcommon/src/: DiagnosticMessageHandler.cpp  DoIPGenericHeaderHandler.cpp
libdoip/hello/libdoipserver/include/: DoIPConnection.h
libdoip/hello/libdoipserver/src/: DoIPConnection.cpp  DoIPServer.cpp  RoutingActivationHandler.cpp  VehicleIdentificationHandler.cpp
libdoip/hello/realize/: DoIPSimulator.cpp
libzmq/: CMakeLists.txt  README.md
libzmq/01_req_rep/: CMakeLists.txt  _type.h  client.cpp  server.cpp
libzmq/cmake/modules/: Findzmq.cmake
md5/: CMakeLists.txt  md5.cc  md5.h  test_func.cpp  test_speed.cpp
md5-optimisation/: CMakeLists.txt  md5_speed.h  md5sum.cpp
nlohmann-json/: CMakeLists.txt  README.md
nlohmann-json/03_third/: CMakeLists.txt  array.json  my.json  parse.cpp  parse_array.cpp
nlohmann-json/04_fourth/: create_json.cpp
openssl/: CMakeLists.txt  README.md
openssl/01_aes/: CMakeLists.txt  README.md  aes_128_cbc_nopadding.cpp  aes_128_cbc_p7padding.cpp  aes_128_ecb_nopadding.cpp  level2_calc.cpp
openssl/02_rsa/: CMakeLists.txt  README.md  rsa_enc_dec.cpp  rsa_enc_dec2.cpp  rsa_enc_dec3.cpp  rsa_key_load.cpp  rsa_key_save.cpp  rsa_sign_verify.cpp
openssl/03_csr/: CMakeLists.txt  csr_create.cpp  csr_parse.cpp
openssl/04_crt/: CMakeLists.txt  README.md  cert.ca.pem  cert.sub.pem  crt_chain_verify.cpp  crt_parse.cpp  crt_pri_match.cpp  crt_verify.cpp
openssl/05_hash/: CMakeLists.txt  sha256_hmac.cpp
protobuf/: README.md
sha256/: CMakeLists.txt  sha256.cc  sha256.h  test_file.cpp  test_func.cpp
spdlog/: 01_default.cpp  04_logfile.cpp  05_daily.cpp  06_monthly.cpp  07_clearlog.cpp  08_periodical.cpp  CMakeLists.txt  README.md
spdlog/include/spdlog/sinks/: monthly_file_sink.h  periodical_file_sink.h
sqlite_orm/: CMakeLists.txt  README.md
sqlite_orm/01_first/: CMakeLists.txt  sqlite_connect.cpp  sqlite_create.cpp  sqlite_insert.cpp
sqlite_orm/02_second/: CMakeLists.txt  delete.cpp  insert.cpp  select.cpp  update.cpp
sqlite_orm/03_third/: CMakeLists.txt  students.cpp
sqlite_orm/cmake/modules/: Findsqlite.cmake  Findsqliteorm.cmake
sqlite_orm/orm/: CMakeLists.txt
tinyxml2/: CMakeLists.txt  parse.cpp  parse.xml
tortellini/: my.ini  test_parse.cpp
